Kubernetes/templates/contactus-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gc-contactus-service-deployment
  labels:
    app: gc-contactus-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gc-contactus-service
  template:
    metadata:
      labels:
        app: gc-contactus-service
    spec:
      containers:
      - name: gc-contactus-service
        image: chrisstefaniak/gc-contactus-service:latest
        imagePullPolicy: Always 
        ports:
        - containerPort: 8080
