Kubernetes/templates/fluentbit-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fluent-bit
spec:
  selector:
    matchLabels:
      app: fluent-bit
  template:
    metadata:
      labels:
        app: fluent-bit
    spec:
      containers:
        - name: fluent-bit
          image: fluent/fluent-bit:3.1.6
          volumeMounts:
            - name: var-log
              mountPath: /var/log
            - name: fluent-bit-config
              mountPath: /fluent-bit/etc
      volumes:
        - name: var-log
          hostPath:
            path: /var/log
        - name: fluent-bit-config
          configMap:
            name: fluent-bit-config
