Kubernetes/templates/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gb-frontend-deployment
  labels:
    app: gb-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gb-frontend
  template:
    metadata:
      labels:
        app: gb-frontend
    spec:
      containers:
      - name: gb-frontend
        image: chrisstefaniak/gb-frontend:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
