Kubernetes/templates/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    app.kubernetes.io/name: gb-backend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
