Kubernetes/templates/contactus-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: contactus-service
spec:
  selector:
    app: gc-contactus-service
  ports:
    - port: 8080
