Kubernetes/templates/graphs-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: graphs-service
spec:
  selector:
    app: gc-graphs-service
  ports:
    - port: 8081
