Kubernetes/templates/prometheus-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-service
spec:
  selector:
    app: gb-prometheus
  ports:
    - port: 9090
