Kubernetes/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gb-ingress
  annotations:
spec:
  ingressClassName: nginx
  rules:
  - host: graphbuilder.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: frontend-service
            port:
              number: 4000
      - pathType: Prefix
        path: /graphs
        backend:
          service:
            name: backend-service
            port:
              number: 8080
      - pathType: Prefix
        path: /actuator/prometheus
        backend:
          service:
            name: backend-service
            port:
              number: 8080
  - host: metrics.graphbuilder.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: grafana-service
            port:
              number: 3000
